@@ -1,14 +1,12 @@
 ## Makefile.am for the TeX Live subdirectory texk/tetex/
 ##
-## Copyright (C) 2009-2011 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009-2012 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
 
-EXTRA_DIST =
-
-perl_scripts = \
-	updmap
+EXTRA_DIST = \
+	updmap-single.pl
 
 shell_scripts = \
 	updmap-sys
@@ -38,7 +36,7 @@ nodist_bin_SCRIPTS =
 include $(srcdir)/../am/script_links.am
 
 texmfdir = $(datarootdir)/$(scriptsdir)
-dist_texmf_SCRIPTS = $(perl_scripts:=.pl) $(shell_scripts:=.sh)
+dist_texmf_SCRIPTS = $(shell_scripts:=.sh)
 
 if !WIN32
 dist_bin_SCRIPTS = $(sh_scripts)
@@ -95,7 +93,7 @@ include $(top_srcdir)/../am/man1_links.am
 
 install-exec-hook: install-bin-links
 
-install-data-hook: install-perl-links install-shell-links install-man1-links
+install-data-hook: install-shell-links install-man1-links
 
 uninstall-hook: uninstall-bin-links uninstall-links uninstall-man1-links
 
